# 2024-P1-fattyhope

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
